--- a/TODO
+++ b/TODO
@@ -1,22 +1,34 @@
 * add group_by columns
 
-    tabular data is often organized into many rows of data, grouped by
-    one or more column values (the sub-rows may then be sorted, but that's
-    another feature).
+Tabular data is often organized into many rows of data, grouped by
+one or more column values (the sub-rows may then be sorted, but that's
+another feature).
 
-    eg: group_by=['header1', 'header2', ..]  # specify column names
-     or group_by=[0, 1]                      # use origin-0 column indexes
+usage:
 
-    causes visual breaks in the presentation
-    use "groupendline=" and "groupstartline=", but only if "group_by" present
+    tabulate(somedata, group_by=['header1', 'header2', ..])
+
+or
+    tabulate(somedata, group_by=[0, 1])  # use origin-0 column indexes
+
+The `group_by` feature causes visual breaks in the presentation
+(a blank line, for example), when the values of the named
+(or indexed) columns changes.
+
+The code should use `group_by_start=` and `group_by_end=` configurations
+for the various table configurations, but only if the `group_by`
+parameter is present.
 
 * add sort_by columns
 
-    much data is sorted by multiple columns, and tabulate should be able to
-    help manage this without requiring multiple indexes to be prepared by the
-    developer
+Much data is sorted by multiple columns, and tabulate should be able to
+help manage this without requiring multiple indexes to be prepared by the
+developer.
 
-    usage: sort_by=['map', 'order']
-       or: sort_by=[0, 1]
+Usage:
 
-    causes data to be indexed and ordered by the given sort columns
+    tabulate(somedata, sort_by=['map', 'order'])
+or
+    tabulate(somedata, sort_by=[0, 1]) # use origin-0 column indexes
+
+The `sort_by` parameter causes data to be indexed and ordered by the given sort columns.
